@startuml

title: Классы анализа прецедентов работы с файлами

package "доменные сущности" {
    class Scenario{
        name: string
        mainFlow_enter: State
        subflow_enter: List<Flow>
        synonymsList: List<Synonyms>
        valiables: List<UserVar>
        add_var(UserVar)
        remove_var(bool)
        workspace_openRequest()
        name(): string
    }

    class Flow {
        name: string
        comand: Synonyms
        enter: State
        backTo: State
    }

    class UserVar{
        rules: List<Rule>
        behaviour: List<Actions>
        update(data)
    }
}

class Projects <<static или singleton>>{
    name: string
    projects: List<ProjectRepository>
    open(File): ProjectRepository
    close(ProjectRepository, bool remove)
}
package "интерфейсы к файлам" {
    class ProjectRepository{
        file: File
        scetario: Scenatio
        dbConnection: DBconnection
        // TODO: DataToEngine
        ProjectRepository(File, bool new)
        save_toFile()
        minDatarequest() : data
        connect_toDB(host, user, password)
    }

    class UserVarRepository{
        file: File
        var: UserVar
        UserVarRepository(File, bool new)
        save_toFile()
        remove_file()
    }
}

Projects *- ProjectRepository
ProjectRepository --> Scenario
Flow -* Scenario
Scenario *- UserVar
UserVarRepository --> UserVar

@enduml